themes/cp_themes/default/css/global.css
/* ... */
#mainContent .formArea .formHeading .newTemplate {
	font-size:			12px;
	font-weight:		normal;
	float:				right;
	background:			#E11842 url('<?=$cp_theme_url?>images/submit_button_bg.gif') bottom left repeat-x;
}

#mainContent .formArea .formHeading .newTemplate a {
	color:				#FFFFFF;
	display:			block;
	padding:			1px 10px;
}

/* My Account */

/* html buttons specific */
.tablesize{display: block;height:32px!important;}
#custom_html_button {width:450px; clear: left; padding-top: 15px;}
/*#custom_html_button label {display: block; float:left;width: 40%;margin-top:5px;}*/
#custom_html_button p {padding-bottom: 5px;}

#menu {
	width: 240px;
}

#menu.side_navigation {
	background-color:#f4f6f6;
	padding-bottom:1px;
	border-right:1px solid #d0d7df;
	border-left:1px solid #d0d7df;
	border-bottom:1px solid #d0d7df;
	}
#menu.side_navigation li li {
	padding:.2em 0
	}	
#menu span, #myAccount h3 {
	display:			block;
	background:			#3f4d55 url('<?=$cp_theme_url?>images/form_area_heading_bg.gif') bottom left repeat-x;
	border-left: 0;
	border-top: 0;
	border-bottom:		1px solid #28353D;
	padding:			6px 4px 6px 15px;
	color:				#ECF1F4;
	font-size:			13px;
	font-weight:		bold;
	margin-bottom: 3px!important;
}

#menu ul {
	margin: 8px 0 10px 15px;
}
#registerUser {
	/*padding: 0;*/
}


	/* avatar browse */
	.browseAvatar {
		width: 100%;
	}

	.browseAvatar td {
		width: 33%;
		text-align: center;
	}

/* Admin and Design page */

h2 a:hover {
	text-decoration:	none;
}

#mainContent h3 {
	color:				#37444d;
	font-size:			1.34em;
	margin-bottom:		10px;
}

/** Important Messages **/
#ee_important_message {
	overflow:hidden;
	margin-left:3.3%;
	margin-right:3.3%;
	margin-bottom:3.3%;
}

#ee_homepage_notice.contents {
	padding:0;
}

#ee_homepage_notice.contents .heading {
	background:#d0eaf7;
}

#ee_homepage_notice.contents .heading h2 {
	background:none;
	color:#3ba1db;
	text-shadow:0 1px 0 #abd8f0;
	
}

.bad_path_error_list li {font-weight:bold; margin-bottom:5px;color:#F72A58;}
.bad_path_error_list li ul li {font-weight:normal; margin-left:15px;margin-bottom:0;color:#5F6C74;}
div.notice_texts .bad_path_error_list li ul li {color:#fff; font-weight:normal;}

#noticeContents.closed {
	display:	none;
}

.heading span.msg_open_close {
	float:			right;
	text-indent:	-5000em;
	display:		block;
	height:			15px;
	width:			15px;
	cursor:			pointer;
	margin:			3px -5px 0 0;
}

#ee_important_message .closedHeading {
	display:none;
}

#mainContent .pageContents#noticeContents {
	background:		#e5f7fc;
	color:			#4d6a7c;
}

span.ee_notice_icon {
	background:transparent url(<?=$cp_theme_url?>images/cp_sprite.png) no-repeat 0 -90px;
	width:13px;
	height:14px;
	display:block;
	float:left;
	margin:3px 5px 0 0;
}

.heading span.msg_open_close {
	background:transparent url(<?=$cp_theme_url?>images/cp_sprite.png) no-repeat -145px -90px;
}

#ee_important_message.closed {
	display: none;
}

#mainContent .pageContents p#newVersionNotice {
	margin-bottom:15px;
}

#checksumFailure {
	margin-bottom:10px;
	font-weight:bold;
	color:#E11842;
	float:left;
}

#checksumFailure ul li {
	margin: 0 0 5px 15px;
	font-weight:normal;
	color:#5F6C74;
}

#ee_important_message a.submit {
	float:left;
	margin-left:15px;
}


#mainContent .tableHeading {
	color:				#37444d;
	font-size:			14px;
	margin-bottom:		10px;
}


#mainContent h4 {
	color:				#37444d;
}

#mainContent .templateColumnMenu {
	float:				left;
	width:				33%;
	margin-bottom:		10px;
}

#mainContent .templateColumnMenu ul {
	padding:			0 10px;
}

#mainContent .templateColumnMenu ul li {
	float:				none;
	width:				auto;
	margin-left:		16px;
}

.del_row {
	display:			none;
	text-align:			center;
}

.tag_order{
	text-align:			center;
}

.templateTable th.template_manager_parse_stage {
  width:				30px;
}

/* new template */

#template_data_type li {
	line-height:		200%;
	padding:			5px;
}

#template_details {
	margin: 10px 0;
	background:			#3f4d55 url('<?=$cp_theme_url?>images/template_edit_header_background.png') top left repeat-x;
	padding: 			14px 17px 4px 17px;
	font-weight:		bold;
	font-size:			13px;
	color:				#FFF;
}

#template_create p {
	margin-bottom:		11px;
}

#template_data,
#template_create textarea {
	padding:			0;
	width:				100%;
	border:				none;
}

#template_create textarea:focus {
	margin:				0;
	padding:			0;
}

#template_create textarea.notes {
	border:					1px solid #b6c0c2;
	padding:				3px;
	width:					99%;
}

#template_create textarea.notes:focus {
	border:					2px solid #B2BEC0;
	padding:				2px;
}

#template_create {
	padding: 0 0 18px 0;
}

#template_create div.markItUpHeader {
  display:none;
}

#template_create div.markItUpFooter {
  margin-bottom:10px;
}

select#site_list_pulldown {margin-bottom:10px;}

.menu_list, 
.member_profile_themes, .wiki_themes {
	list-style:	none;
}

.menu_list li a, 
.member_profile_themes li a, .wiki_themes li a, 
.forum_themes li a, .translation_files li a {
	display:			block;
	padding:			5px 0 5px 40px;
	font-weight:		bold;
	font-size:			13px;
	background: 		#ECF1F4 url('<?=$cp_theme_url?>images/list_item_group.gif') 17px center no-repeat;
	border-bottom:		1px solid #d0d7df;
}

.menu_list li.odd a, 
.member_profile_themes li.odd a, .wiki_themes li.odd a, 
.forum_themes li.odd a, .translation_files li.odd a {
	background-color:	#f4f6f6;
}

.menu_list li a:hover,
.member_profile_themes li a:hover, .wiki_themes li a:hover, 
.forum_themes li a:hover, .translation_files li a:hover {
	/*border-bottom:		1px solid #fff;*/
	background:			#fff url('<?=$cp_theme_url?>images/list_item_group_hover.gif') 17px center no-repeat;
	color:				#e11842;
}

/* global variables */

#mainContent .pageContents #new_global_var {
	padding:		14px;
}

#mainContent .pageContents #new_global_var p {
	margin-bottom: 14px;
}

#new_global_var label {
	color: 				#5f6c74;
	font-weight: 		bold;
}

#mainContent .field {
	width: 59%;
}

.fullfield {
	width: 99%;
}
/* ... */

